# peterMath

./: .gitignore  Cargo.toml  README.md
.github/workflows/: windows-release.yml
assets/: presets.json
docs/: BACKUP_OPTIONS.md  BUILD_WINDOWS_FROM_MAC.md  CODEX_PROMPTS_EN.md  PROJECT_BRIEF.md  PROJECT_PLAN.md  README_CN.md  REFERENCE_PROJECTS.md  TEACHING_GAME_SPEC.md  info1.txt
judge_submission_template/: FINAL_SUBMISSION_STRUCTURE.md  README_给评委.txt  作品说明_学生版_草稿.md  参数实验记录表.csv
screenshots/: README.md
scripts/: package_submission.py
src/: analysis.rs  app.rs  export.rs  gpu.rs  main.rs  metrics.rs  palette.rs
src/simulation/: lenia.rs  life.rs  mod.rs  reaction_diffusion.rs
web_html/: README.md  index.html
