[package]
name = "peterMath"
version = "0.1.0"
edition = "2021"
description = "peterMath: a Lenia mathematical life teaching game"
license = "UNLICENSED"
default-run = "peterMath"

[[bin]]
name = "peterMath"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.31"
fastrand = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
